--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -1,9 +1,28 @@
 ---
 deployment:
   tasks:
-    - export DEPLOY_FOLDER="${DEPLOY_FOLDER:-tp}"
-    - export DEPLOYPATH="$HOME/public_html/${DEPLOY_FOLDER}"
-    - /bin/mkdir -p "$DEPLOYPATH"
-    - /usr/bin/rsync -az --delete --exclude ".git/" --exclude ".github/" ./ "$DEPLOYPATH/"
-    - /usr/bin/find "$DEPLOYPATH" -type d -exec chmod 755 {} \;
-    - /usr/bin/find "$DEPLOYPATH" -type f -exec chmod 644 {} \;
+    # 1) Déterminer automatiquement la cible selon le nom du repo cPanel
+    - export REPO_NAME="$(basename "$(pwd)")"
+    - if [ "$REPO_NAME" = "release" ]; then export TARGET_DIR="$HOME/public_html/release"; else export TARGET_DIR="$HOME/public_html/tp"; fi
+    - echo "📦 Repo: $REPO_NAME"
+    - echo "🎯 Target: $TARGET_DIR"
+
+    # 2) Créer la cible si besoin
+    - /bin/mkdir -p "$TARGET_DIR"
+
+    # 3) Copier le contenu vers la cible (miroir propre)
+    #    --delete : supprime côté target les fichiers supprimés côté repo
+    #    --exclude : évite de publier .git, workflows, etc.
+    - /bin/rsync -az --delete \
+        --exclude=".git/" \
+        --exclude=".github/" \
+        --exclude=".cpanel.yml" \
+        ./ "$TARGET_DIR/"
+
+    # 4) Fix permissions (évite "Server unable to read htaccess file")
+    - /bin/find "$TARGET_DIR" -type d -exec chmod 755 {} \;
+    - /bin/find "$TARGET_DIR" -type f -exec chmod 644 {} \;
+    - if [ -f "$TARGET_DIR/.htaccess" ]; then chmod 644 "$TARGET_DIR/.htaccess"; fi
+
+    # 5) Petite preuve visuelle en logs
+    - echo "✅ Deployed to $TARGET_DIR"
