--- a/.github/workflows/deploy-api.yml
+++ b/.github/workflows/deploy-api.yml
@@ -1,169 +1,211 @@
-name: Test -> Release -> Promote Prod (o2switch)
+name: CI/CD o2switch (Release -> Prod) via API Token
 
 on:
   push:
     branches: ["main"]
   workflow_dispatch:
 
-# Evite que plusieurs runs se marchent dessus (nom unique)
 concurrency:
-  group: deploy-o2switch-api-${{ github.ref }}
+  group: deploy-o2switch-${{ github.ref }}
   cancel-in-progress: true
 
 jobs:
-  deploy:
+  release-then-prod:
     runs-on: ubuntu-latest
 
     env:
       CPANEL_SERVER: ${{ secrets.CPANEL_SERVER }}          # ex: truie.o2switch.net
       CPANEL_LOGIN:  ${{ secrets.CPANEL_LOGIN }}           # ex: keze7545
       CPANEL_TOKEN:  ${{ secrets.CPANEL_TOKEN }}           # token API cPanel
+
       O2SWITCH_REMOTE_RELEASE: ${{ secrets.O2SWITCH_REMOTE_RELEASE }}  # ssh://.../repositories/release
       O2SWITCH_REMOTE_PROD:    ${{ secrets.O2SWITCH_REMOTE_PROD }}     # ssh://.../repositories/tp-site
 
+      # Chemins ABSOLUS des repos côté serveur (pour l'API deploy)
+      CPANEL_REPO_PATH_RELEASE: /home/keze7545/repositories/release
+      CPANEL_REPO_PATH_PROD:    /home/keze7545/repositories/tp-site
+
     steps:
-      - name: Checkout (full history, no shallow)
+      # 1) Checkout complet
+      - name: Checkout
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
 
-      # --------------------------
-      # 1) TESTS (simples)
-      # --------------------------
-      - name: Basic structure checks
+      # (sécurité au cas où)
+      - name: Ensure repository is not shallow
+        run: |
+          if git rev-parse --is-shallow-repository | grep -q true; then
+            git fetch --unshallow
+          fi
+
+      # 2) Tests rapides
+      - name: Basic checks
         run: |
           set -euo pipefail
           test -f index.html || (echo "❌ index.html manquant" >&2; exit 1)
 
-          # bloque si fichiers > 5MB (hors .git)
           if find . -type f -size +5M -not -path "./.git/*" | grep -q .; then
             echo "❌ Fichiers > 5 Mo détectés." >&2
             find . -type f -size +5M -not -path "./.git/*" -print >&2
             exit 1
           fi
+          echo "✅ Checks OK"
 
-          echo "✅ checks OK"
+      # 3) Validation HTML (non bloquante)
+      - name: HTML validation (permissive)
+        continue-on-error: true
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y tidy
+          tidy -qe -utf8 index.html || echo "⚠️ Tidy a signalé des problèmes (non bloquant)"
 
-      - name: HTML tidy (non bloquant)
+      # 4) Whitelist IP du runner via API o2switch (SSH/22)
+      - name: Whitelist runner IP on o2switch firewall (SSH/22)
+        id: fw_add
         run: |
           set -euo pipefail
           sudo apt-get update
-          sudo apt-get install -y tidy
+          sudo apt-get install -y jq curl
 
-          # tidy retourne !=0 s'il trouve des erreurs. On ne bloque pas, on log juste.
-          tidy -q -e index.html || echo "⚠️ Tidy a signalé des problèmes (non bloquant)"
-
-      # --------------------------
-      # 2) WHITELIST IP runner via API token (o2switch)
-      # --------------------------
-      - name: Detect runner public IP
-        id: ip
-        run: |
-          set -euo pipefail
-          IP="$(curl -s https://api.ipify.org)"
-          echo "ip=$IP" >> "$GITHUB_OUTPUT"
+          IP=$(curl -s https://api.ipify.org)
           echo "Runner IP: $IP"
+          echo "ip=$IP" >> "$GITHUB_OUTPUT"
 
-      - name: Whitelist runner IP for SSH (API token)
-        run: |
-          set -euo pipefail
-          IP="${{ steps.ip.outputs.ip }}"
-          echo "Whitelisting IP=$IP on $CPANEL_SERVER"
+          RESP=$(curl -sm 45 -H "Authorization: cpanel ${CPANEL_LOGIN}:${CPANEL_TOKEN}" \
+            "https://${CPANEL_SERVER}:2083/execute/SshWhitelist/add?address=${IP}&port=22")
+          echo "$RESP" | jq .
+          test "$(echo "$RESP" | jq -r '.status')" = "1"
 
-          # Endpoint officiel o2switch (micro API via execute/SshWhitelist/add)
-          # Auth: "Authorization: cpanel LOGIN:TOKEN"
-          curl -sS -m 45 \
-            -H "Authorization: cpanel ${CPANEL_LOGIN}:${CPANEL_TOKEN}" \
-            "https://${CPANEL_SERVER}:2083/execute/SshWhitelist/add?address=${IP}&port=22" \
-            | tee /tmp/whitelist.json
-
-          # Optionnel : afficher status si jq dispo
-          cat /tmp/whitelist.json
-
-      - name: Wait until port 22 reachable (max ~60s)
-        run: |
-          set -euo pipefail
-          HOST="$(echo "${O2SWITCH_REMOTE_PROD}" | awk -F'[@/]' '{print $2}')"
-          echo "Testing SSH reachability on $HOST:22"
-          for i in $(seq 1 12); do
-            if nc -zvw3 "$HOST" 22; then
-              echo "✅ SSH reachable"
-              exit 0
-            fi
-            echo "⏳ still blocked... retry $i/12"
-            sleep 5
-          done
-          echo "❌ SSH still unreachable after retries" >&2
-          exit 1
-
-      # --------------------------
-      # 3) SSH setup + known_hosts
-      # --------------------------
+      # 5) Agent SSH (clé privée)
       - name: Setup SSH agent
         uses: webfactory/ssh-agent@v0.9.0
         with:
           ssh-private-key: ${{ secrets.O2SWITCH_SSH_KEY }}
 
-      - name: Add o2switch host to known_hosts (safe)
+      # 6) known_hosts (safe)
+      - name: Add o2switch hosts to known_hosts
         run: |
           set -euo pipefail
-          mkdir -p ~/.ssh
-          chmod 700 ~/.ssh
+          mkdir -p ~/.ssh && chmod 700 ~/.ssh
+          touch ~/.ssh/known_hosts && chmod 600 ~/.ssh/known_hosts
 
-          HOST="$(echo "${O2SWITCH_REMOTE_PROD}" | awk -F'[@/]' '{print $2}')"
-          echo "Detected SSH host: $HOST"
+          REL_HOST=$(echo "${O2SWITCH_REMOTE_RELEASE}" | sed -E 's#ssh://([^@]+@)?([^/:]+).*#\2#')
+          PROD_HOST=$(echo "${O2SWITCH_REMOTE_PROD}"    | sed -E 's#ssh://([^@]+@)?([^/:]+).*#\2#')
 
-          # On tente un ssh-keyscan ; si ça échoue, on active accept-new (moins strict mais ok en CI)
-          ssh-keyscan -H "$HOST" >> ~/.ssh/known_hosts 2>/dev/null || true
+          echo "Release host: $REL_HOST"
+          echo "Prod host:    $PROD_HOST"
 
-          # "accept-new" évite le prompt interactif, tout en restant plus safe que "no"
-          cat >> ~/.ssh/config <<'EOF'
-          Host *
+          ssh-keyscan -T 30 -H "$REL_HOST"  >> ~/.ssh/known_hosts || true
+          ssh-keyscan -T 30 -H "$PROD_HOST" >> ~/.ssh/known_hosts || true
+
+          cat >> ~/.ssh/config <<EOF
+          Host $REL_HOST
+            StrictHostKeyChecking accept-new
+            UserKnownHostsFile ~/.ssh/known_hosts
+          Host $PROD_HOST
             StrictHostKeyChecking accept-new
             UserKnownHostsFile ~/.ssh/known_hosts
           EOF
+          chmod 600 ~/.ssh/config
 
-          chmod 600 ~/.ssh/config ~/.ssh/known_hosts || true
-
-      # --------------------------
-      # 4) Push vers RELEASE puis PROD
-      # --------------------------
-      - name: Ensure repository is not shallow (safety)
-        run: |
-          set -euo pipefail
-          if git rev-parse --is-shallow-repository | grep -q true; then
-            git fetch --unshallow
-          fi
-
+      # =========================
+      # RELEASE: Push + Deploy
+      # =========================
       - name: Push to o2switch RELEASE repo
         run: |
           set -euo pipefail
           git remote remove o2switch_release 2>/dev/null || true
           git remote add o2switch_release "${O2SWITCH_REMOTE_RELEASE}"
+          GIT_SSH_COMMAND="ssh -o BatchMode=yes" git push -f o2switch_release HEAD:refs/heads/main
 
-          # push normal (pas -f) pour éviter les surprises
-          git push o2switch_release HEAD:refs/heads/main
+      - name: Trigger cPanel Deploy for RELEASE (API)
+        run: |
+          set -euo pipefail
+          sudo apt-get update
+          sudo apt-get install -y jq curl
 
-      - name: Push to o2switch PROD repo (tp-site)
+          # cPanel API: VersionControl/deploy
+          URL="https://${CPANEL_SERVER}:2083/execute/VersionControl/deploy"
+          REPO_ENC=$(python3 -c 'import urllib.parse,os; print(urllib.parse.quote(os.environ["CPANEL_REPO_PATH_RELEASE"]))')
+
+          RESP=$(curl -sS -m 60 \
+            -H "Authorization: cpanel ${CPANEL_LOGIN}:${CPANEL_TOKEN}" \
+            "${URL}?repository_root=${REPO_ENC}")
+
+          echo "$RESP" | jq .
+          test "$(echo "$RESP" | jq -r '.status')" = "1"
+
+      - name: Smoke test RELEASE
+        run: |
+          set -euo pipefail
+          URL="https://release.p-wf.fr"
+          echo "Checking $URL ..."
+          for i in $(seq 1 25); do
+            code=$(curl -k -s -o /dev/null -w "%{http_code}" "$URL" || true)
+            echo "Attempt $i => HTTP $code"
+            if [ "$code" = "200" ] || [ "$code" = "301" ] || [ "$code" = "302" ]; then
+              echo "✅ Release reachable"
+              break
+            fi
+            sleep 8
+          done
+          curl -k -s "$URL" | head -n 20
+
+      # =========================
+      # PROD: Push + Deploy
+      # =========================
+      - name: Push to o2switch PROD repo
         run: |
           set -euo pipefail
           git remote remove o2switch_prod 2>/dev/null || true
           git remote add o2switch_prod "${O2SWITCH_REMOTE_PROD}"
-          git push o2switch_prod HEAD:refs/heads/main
+          GIT_SSH_COMMAND="ssh -o BatchMode=yes" git push -f o2switch_prod HEAD:refs/heads/main
 
-      # --------------------------
-      # 5) (Optionnel) Nettoyage whitelist
-      # --------------------------
-      - name: Remove runner IP from whitelist (cleanup)
+      - name: Trigger cPanel Deploy for PROD (API)
+        run: |
+          set -euo pipefail
+          sudo apt-get update
+          sudo apt-get install -y jq curl
+
+          URL="https://${CPANEL_SERVER}:2083/execute/VersionControl/deploy"
+          REPO_ENC=$(python3 -c 'import urllib.parse,os; print(urllib.parse.quote(os.environ["CPANEL_REPO_PATH_PROD"]))')
+
+          RESP=$(curl -sS -m 60 \
+            -H "Authorization: cpanel ${CPANEL_LOGIN}:${CPANEL_TOKEN}" \
+            "${URL}?repository_root=${REPO_ENC}")
+
+          echo "$RESP" | jq .
+          test "$(echo "$RESP" | jq -r '.status')" = "1"
+
+      - name: Smoke test PROD
+        run: |
+          set -euo pipefail
+          URL="https://tp.p-wf.fr"
+          echo "Checking $URL ..."
+          for i in $(seq 1 25); do
+            code=$(curl -k -s -o /dev/null -w "%{http_code}" "$URL" || true)
+            echo "Attempt $i => HTTP $code"
+            if [ "$code" = "200" ] || [ "$code" = "301" ] || [ "$code" = "302" ]; then
+              echo "✅ Prod reachable"
+              break
+            fi
+            sleep 8
+          done
+          curl -k -s "$URL" | head -n 20
+
+      # 9) Nettoyage whitelist (toujours exécuté)
+      - name: Remove runner IP from whitelist
         if: always()
         run: |
           set -euo pipefail
-          IP="${{ steps.ip.outputs.ip }}"
-          echo "Removing IP=$IP from whitelist"
+          sudo apt-get update
+          sudo apt-get install -y jq curl
 
-          # Il faut supprimer in ET out (sinon ça ne libère pas le quota)
-          curl -sS -m 45 -H "Authorization: cpanel ${CPANEL_LOGIN}:${CPANEL_TOKEN}" \
-            "https://${CPANEL_SERVER}:2083/execute/SshWhitelist/remove?address=${IP}&port=22&direction=in" || true
-
-          curl -sS -m 45 -H "Authorization: cpanel ${CPANEL_LOGIN}:${CPANEL_TOKEN}" \
-            "https://${CPANEL_SERVER}:2083/execute/SshWhitelist/remove?address=${IP}&port=22&direction=out" || true
+          IP="${{ steps.fw_add.outputs.ip }}"
+          echo "Removing $IP from whitelist"
+          for DIR in in out; do
+            RESP=$(curl -sm 45 -H "Authorization: cpanel ${CPANEL_LOGIN}:${CPANEL_TOKEN}" \
+              "https://${CPANEL_SERVER}:2083/execute/SshWhitelist/remove?address=${IP}&port=22&direction=${DIR}")
+            echo "$RESP" | jq .
+          done
